[gd_scene load_steps=20 format=2]

[ext_resource path="res://addons/tnt_input_engine/virtual_joy_componets/tnt_virtual_dpad.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/tnt_input_engine/virtual_joy_componets/tnt_input_engine.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/scenes/code/demo_1.gd" type="Script" id=3]
[ext_resource path="res://demo/assets/boy/boy.png" type="Texture" id=4]
[ext_resource path="res://demo/scenes/code/player.gd" type="Script" id=5]
[ext_resource path="res://demo/shared/HW_JoyInfo.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 82 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 82 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 82 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 82 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 82, 64, 82 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 64, 82, 64, 82 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 128, 82, 64, 82 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 192, 82, 64, 82 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 164, 64, 82 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 64, 164, 64, 82 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 128, 164, 64, 82 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 192, 164, 64, 82 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "down",
"speed": 6.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "right",
"speed": 6.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "up",
"speed": 6.0
} ]

[node name="demo_1" type="Node"]
script = ExtResource( 3 )

[node name="Player" type="KinematicBody2D" parent="."]
script = ExtResource( 5 )

[node name="Animation" type="AnimatedSprite" parent="Player"]
frames = SubResource( 13 )
animation = "down"
frame = 1

[node name="UserInput" type="Node" parent="."]

[node name="TNT_Input_Engine" parent="UserInput" instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
"VirtualJoy Visibility/Mode" = 0

[node name="TNT_Virtual_Dpad" parent="UserInput/TNT_Input_Engine" instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -210.0
margin_right = 114.0
margin_bottom = -120.0

[node name="HUD" type="Node" parent="."]

[node name="Container" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="HUD/Container"]
anchor_right = 1.0
margin_bottom = 65.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblInfo" type="Label" parent="HUD/Container/GridContainer"]
margin_right = 225.0
margin_bottom = 65.0
text = "TO MOVE:
   - Use arrows keys (if avaible)
   - Use virtual joystick (if avaible)
   - Use Hardware joypad (if avaible)"

[node name="HW_JoyInfo" parent="HUD/Container" instance=ExtResource( 6 )]
margin_top = -2.0
margin_bottom = 104.0

[node name="Button" type="Button" parent="HUD/Container"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -81.0
margin_top = -73.0
margin_right = -9.0
margin_bottom = -8.0
text = "  NEXT >  "

[node name="lblTNT" type="Label" parent="HUD/Container"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
rect_min_size = Vector2( 0, 26 )
text = "TNT Input Engine v1.00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="hw_joy_changed" from="UserInput/TNT_Input_Engine" to="." method="_on_TNT_Input_Engine_hw_joy_changed"]
[connection signal="pressed" from="HUD/Container/Button" to="." method="_on_Button_pressed"]
